Clean up CSS, remove console logs, and fix formatting and spacing

--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -47,3 +47,7 @@ h4 {
 	color: #523F38;
 }
 
+.selected {
+	color: #FF715B;
+}
+
